--- a/AnalyseRisques/AnalyseRisques.vcxproj
+++ b/AnalyseRisques/AnalyseRisques.vcxproj
@@ -150,11 +150,18 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\Téléchargements\AnalyseRisque\Analyse.h" />
+    <ClInclude Include="..\..\..\Téléchargements\AnalyseRisque\Dictionnaire.h" />
+    <ClInclude Include="..\..\..\Téléchargements\AnalyseRisque\Patient.h" />
     <ClInclude Include="GestionMedecin.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\Téléchargements\AnalyseRisque\Analyse.cpp" />
+    <ClCompile Include="..\..\..\Téléchargements\AnalyseRisque\AnalyseRisqueMedical.cpp" />
+    <ClCompile Include="..\..\..\Téléchargements\AnalyseRisque\Dictionnaire.cpp" />
+    <ClCompile Include="..\..\..\Téléchargements\AnalyseRisque\Patient.cpp" />
     <ClCompile Include="Client.cpp" />
     <ClCompile Include="GestionMedecin.cpp" />
     <ClCompile Include="stdafx.cpp">
